--- a/public/index.html
+++ b/public/index.html
@@ -4,12 +4,70 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&family=Inter:wght@300;500&display=swap" rel="stylesheet">
+    <link
+      href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&family=Inter:wght@300;500&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./styles/styles.css" />
   </head>
   <body>
-    <header></header>
+    <header>
+      <img src="../assets/images/main-logo.svg" alt="" />
+      <div class="header--title-container">
+        <h1>La proxima revolucion en el intercambio de monedas</h1>
+        <p>
+          Batatabit te ayuda a navegrar entre los diferentes precios y
+          tendencias
+        </p>
+        <a href="" class="header--button">
+          Conoce nuestros planes <span></span
+        ></a>
+      </div>
+    </header>
     <main>
-      <section></section>
+      <section class="main-exchange-container">
+        <div class="exchange--background"></div>
+        <div class="exchange--title">
+          <h2>Visibilizamos todas las tasas de cambio</h2>
+          <p>
+            Traemos informacion en tiempo real de las casas de cambio y las
+            monedas mas importantes del mundo
+          </p>
+        </div>
+        <section class="main-tables-container">
+          <div class="main-currency-table">
+            <p class="currency-table--title">Monedas</p>
+            <div class="currency-table-container">
+              <table>
+                <tr>
+                  <td class="table__top-left">Bitcoin</td>
+                  <td class="table__top-right table__right">
+                    $1.96 <span></span>
+                  </td>
+                </tr>
+                <tr>
+                  <td>Ethereum</td>
+                  <td class="table__right">$0.07 <span></span></td>
+                </tr>
+                <tr>
+                  <td>Ripple</td>
+                  <td class="table__right">$2.17 <span></span></td>
+                </tr>
+                <tr>
+                  <td class="table__bottom-left">Stellar</td>
+                  <td class="table__botom-right table__right">
+                    $4.96 <span></span>
+                  </td>
+                </tr>
+              </table>
+            </div>
+            <div class="currency-table--date">
+              <p><b>Actualizado:</b> 13 Noviembre 23:45</p>
+            </div>
+          </div>
+        </section>
+      </section>
+
       <section></section>
       <section></section>
       <section></section>
