Add logos to the page

--- a/public/index.html
+++ b/public/index.html
@@ -42,21 +42,21 @@
                 <tr>
                   <td class="table__top-left">Bitcoin</td>
                   <td class="table__top-right table__right">
-                    $1.96 <span></span>
+                    $1.96 <span class="table__logo-down"></span>
                   </td>
                 </tr>
                 <tr>
                   <td>Ethereum</td>
-                  <td class="table__right">$0.07 <span></span></td>
+                  <td class="table__right">$0.07 <span class="table__logo-up "></span></td>
                 </tr>
                 <tr>
                   <td>Ripple</td>
-                  <td class="table__right">$2.17 <span></span></td>
+                  <td class="table__right">$2.17 <span class="table__logo-down"></span></td>
                 </tr>
                 <tr>
                   <td class="table__bottom-left">Stellar</td>
                   <td class="table__botom-right table__right">
-                    $4.96 <span></span>
+                    $4.96 <span class="table__logo-up "></span>
                   </td>
                 </tr>
               </table>
