--- a/public/index.html
+++ b/public/index.html
@@ -68,9 +68,20 @@
         </section>
       </section>
 
-      <section></section>
-      <section></section>
-      <section></section>
+      <section class="main-product-detail">
+        <span class="product-detail__batata-logo"></span>
+        <div class="product-detail__title">
+          <h2> Creamos un producto sin comparacion.</h2>
+          <p>Confiable y diseñado para su uso diario</p>
+        </div>
+        <section class="product-cards__container">
+          <article class="product-cards__detail">
+            <span class="product-card__icon"></span>
+            <p class="product-card__title">Tiempo real</p>
+            <p class="product-card__body">Nuestro API toma informacion minuto a minuto sobre las tasas que mas determinan el comportamiento</p>
+          </article>
+        </section>
+      </section>
     </main>
     <footer></footer>
   </body>
