Add icons and more cards

--- a/public/index.html
+++ b/public/index.html
@@ -74,12 +74,36 @@
           <h2> Creamos un producto sin comparacion.</h2>
           <p>Confiable y diseñado para su uso diario</p>
         </div>
+
         <section class="product-cards__container">
           <article class="product-cards__detail">
-            <span class="product-card__icon"></span>
+            <span class="icon-card clock"></span>
             <p class="product-card__title">Tiempo real</p>
             <p class="product-card__body">Nuestro API toma informacion minuto a minuto sobre las tasas que mas determinan el comportamiento</p>
           </article>
+        </section>
+
+        <section class="product-cards__container">
+          <article class="product-cards__detail">
+            <span class="icon-card eye"></span>
+            <p class="product-card__title">No hay escondidas</p>
+            <p class="product-card__body">Ni en la compra ni en el momento de exit, Batatabit siempre te muestra el costo real de lo que estas adquiriendo</p>
+          </article>
+
+          <section class="product-cards__container">
+            <article class="product-cards__detail">
+              <span class="icon-card dollar"></span>
+              <p class="product-card__title">Compara monedas</p>
+              <p class="product-card__body">No mas rumores, con Batatabit sabras el valor real de cada moneda en el mercado actual</p>
+            </article>
+
+            <section class="product-cards__container">
+              <article class="product-cards__detail">
+                <span class="icon-card circle"></span>
+                <p class="product-card__title">Informacion confiable</p>
+                <p class="product-card__body">Nuestra fuentes estan 100% verificadas y continuamos auditando su contenido mientras se actualizan</p>
+              </article>
+
         </section>
       </section>
     </main>
