--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
           Batatabit te ayuda a navegrar entre los diferentes precios y
           tendencias
         </p>
-        <a href="" class="header--button">
+        <a href="#plans" class="header--button">
           Conoce nuestros planes <span></span
         ></a>
       </div>
@@ -89,6 +89,7 @@
             <p class="product-card__title">No hay escondidas</p>
             <p class="product-card__body">Ni en la compra ni en el momento de exit, Batatabit siempre te muestra el costo real de lo que estas adquiriendo</p>
           </article>
+        </section>
 
           <section class="product-cards__container">
             <article class="product-cards__detail">
@@ -96,6 +97,7 @@
               <p class="product-card__title">Compara monedas</p>
               <p class="product-card__body">No mas rumores, con Batatabit sabras el valor real de cada moneda en el mercado actual</p>
             </article>
+          </section>
 
             <section class="product-cards__container">
               <article class="product-cards__detail">
@@ -103,7 +105,28 @@
                 <p class="product-card__title">Informacion confiable</p>
                 <p class="product-card__body">Nuestra fuentes estan 100% verificadas y continuamos auditando su contenido mientras se actualizan</p>
               </article>
+            </section>
+      </section>
 
+      <section class="bitcoin-img-container">
+        <h2>Conocelo hoy</h2>
+      </section>
+
+      <section id="plans" class="main-plans-container">
+        <div class="plans__title">
+          <h2>Escoge el mejor plan que mejor se ajuste a ti</h2>
+          <p>Cualquier plan te da acceso a nuestra plataforma</p>
+        </div>
+        <section class="cards-container__slider" >
+          <article class="card-container">
+            <p class="card__recomended">Recomendado</p>
+            <div class="card__info">
+              <h3 class="card__title">Pago Anual</h3>
+              <p  class="card__price"><span>$</span>99</p>
+              <p class="card__saving">* Ahorra $129 comparado al plan mensual</p>
+              <button class="card__ca">Escoger este <span></span></button>
+            </div>
+          </article>
         </section>
       </section>
     </main>
