--- a/public/index.html
+++ b/public/index.html
@@ -118,15 +118,37 @@
           <p>Cualquier plan te da acceso a nuestra plataforma</p>
         </div>
         <section class="cards-container__slider" >
-          <article class="card-container">
-            <p class="card__recomended">Recomendado</p>
+          
+          <article class="card-container background-white">
+            <p class="card__top-label background-orange">Recomendado</p>
             <div class="card__info">
-              <h3 class="card__title">Pago Anual</h3>
-              <p  class="card__price"><span>$</span>99</p>
-              <p class="card__saving">* Ahorra $129 comparado al plan mensual</p>
-              <button class="card__ca">Escoger este <span></span></button>
+              <h3 class="card__title black-text">Pago Anual</h3>
+              <p  class="card__price"><span>$</span>79</p>
+              <p class="card__saving grey-text">* Ahorra $129 comparado al plan mensual</p>
+              <button class="card__ca ca--background-white ca--border-orange">Escoger este <span></span></button>
             </div>
           </article>
+
+          <article class="card-container background-black">
+            <p class="card__top-label background-grey">Ilimitado</p>
+            <div class="card__info">
+              <h3 class="card__title white-text">Un solo pago </h3>
+              <p  class="card__price white-text"><span>$</span>99</p>
+              <p class="card__saving white-text">* Ahorra $329 comparado al plan mensual</p>
+              <button class="card__ca ca--background-black white-text ca--border-orange">Escoger este <span></span></button>
+            </div>
+          </article>
+
+          <article class="card-container background-white">
+            <p class="card__top-label background-blue">Mensual</p>
+            <div class="card__info">
+              <h3 class="card__title black-text">Paga mensual </h3>
+              <p  class="card__price black-text"><span>$</span>29</p>
+              <p class="card__saving grey-text">* Ahorra $19 </p>
+              <button class="card__ca ca--background-white black-text ca--border-grey">Escoger este <span></span></button>
+            </div>
+          </article>
+
         </section>
       </section>
     </main>
