Create footer structure

--- a/public/index.html
+++ b/public/index.html
@@ -118,7 +118,7 @@
           <p>Cualquier plan te da acceso a nuestra plataforma</p>
         </div>
         <section class="cards-container__slider" >
-          
+
           <article class="card-container background-white">
             <p class="card__top-label background-orange">Recomendado</p>
             <div class="card__info">
@@ -152,6 +152,17 @@
         </section>
       </section>
     </main>
-    <footer></footer>
+    <footer>
+      <section class="footer__left">
+        <ul>
+          <li><a href="#">Linkedin</a></li>
+          <li><a href="#">Crunchbase</a></li>
+          <li><a href="#">Hackernews</a></li>
+        </ul>
+      </section>
+      <section class="footer__right">
+        <img src="../assets/images/footer-logo.png" alt="Logo de Batatabit 2020">
+      </section>
+    </footer>
   </body>
 </html>
